<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.example.e_event.view.check_in.CheckInViewModel" />

        <import type="android.view.View" />

        <variable
            name="checkInViewModel"
            type="CheckInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:context=".view.check_in.CheckInActivity">


        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_top_150"
            android:text="@string/title_text_check_in"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="@dimen/size_20"
            android:background="@drawable/form_edit_text"
            android:hint="@string/et_name_fragment"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/size_5"
            android:text="@={checkInViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeader" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_5"
            android:layout_marginEnd="@dimen/size_20"
            android:background="@drawable/form_edit_text"
            android:hint="@string/et_email_fragment"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/size_5"
            android:text="@={checkInViewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/width_250"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/shape_button_confirm"
            android:text="@string/btn_confirm"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"/>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{checkInViewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>