<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.check_in.CheckInActivity">


        <TextView
            android:id="@+id/tvHeader"
            android:text="Para efetuar o check-in\n digite seus dados:"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"/>


        <EditText
            android:id="@+id/etName"
            android:hint="@string/et_name_fragment"
            android:paddingStart="15dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/form_edit_text"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvHeader"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/et_email_fragment"
            android:paddingStart="15dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:background="@drawable/form_edit_text"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etName"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:text="@string/btn_confirm"
            android:background="@drawable/shape_button_confirm"
            android:textAllCaps="false"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLoaderCheckIn"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparentLoader">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>