<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.e_event.model.Event" />
        <import type="com.example.e_event.view.main.MainActivityViewModel" />

        <variable
            name="event"
            type="Event" />

        <variable
            name="mainViewModel"
            type="MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCardEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivPhoto"
                imageFromUrl="@{event.image}"
                tools:src="@mipmap/ic_launcher_round"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_250"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvTitle"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"/>

            <TextView
                android:id="@+id/tvPrice"
                android:text="@{String.valueOf(event.priceEvent)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="@dimen/size_text_16"
                android:textColor="@color/colorPrice"
                app:layout_constraintStart_toEndOf="@id/tvSyphra"
                app:layout_constraintTop_toBottomOf="@id/tvDateNumber"
                tools:text="999,00" />

            <TextView
                android:id="@+id/tvSyphra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="5dp"
                android:text="@string/ticket_value_txt"
                android:textSize="@dimen/size_text_16"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/tvPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDateNumber" />

            <TextView
                android:id="@+id/tvTitle"
                android:text="@{event.title}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPhoto"
                tools:text="Pepsi OnStage" />

            <TextView
                android:id="@+id/tvDateNumber"
                android:text="@{@string/format(event.date)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/margin_5"
                android:textSize="@dimen/size_text_16"
                app:layout_constraintStart_toEndOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="12/08/1996" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/date_txt"
                android:textSize="@dimen/size_text_16"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <Button
                android:id="@+id/btnMore"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/form_edit_text"
                android:text="@string/btn_more_row"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrice" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clCardEvent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>